<resources>
    <string name="app_name">sharenote</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">请登录</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">服务器设置</string>

    <string name="menu_home">文件</string>
    <string name="menu_gallery">下载列表</string>
    <string name="menu_slideshow">离线下载</string>
    <string name="menu_tools">设置</string>
    <string name="menu_share">社区</string>
    <string name="login_welcome">欢迎登陆</string>
    <string name="login_username">请输入用户名</string>
    <string name="login_password">输入密码</string>
    <string name="login_login">登录</string>
    <string name="login_register">注册新用户</string>
    <string name="login_forget">忘记密码</string>
    <string name="login_contact">联系客服</string>
    <string name="login_about">关于我们</string>
    <string name="register_welcome">注册账号</string>
    <string name="register_password">确认密码</string>
    <string name="register_used_username">该用户名已被注册</string>
    <string name="register_regist">注册</string>
    <string name="dia_select_photo">从相册选择</string>
    <string name="dia_take_photo">拍照</string>


    <string name="start">开始</string>
    <string name="pause">暂停</string>
    <string name="delete">删除</string>

    <string name="tasks_manager_demo_title">任务管理器案例</string>
    <string name="tasks_manager_demo_name" formatted="false">任务: %d</string>
    <string name="tasks_manager_demo_status_loading">状态: 加载中...</string>
    <string name="tasks_manager_demo_status_pending">状态: 队列中</string>
    <string name="tasks_manager_demo_status_started">状态: 开始下载</string>
    <string name="tasks_manager_demo_status_connected">状态: 已连接上</string>
    <string name="tasks_manager_demo_status_progress">状态: 下载中...</string>
    <string name="tasks_manager_demo_status_downloading" formatted="false">状态: 正在下载 %d</string>
    <string name="tasks_manager_demo_status_error">状态: 出错</string>
    <string name="tasks_manager_demo_status_paused">状态: 暂停</string>
    <string name="tasks_manager_demo_status_completed">状态: 下载完成</string>
    <string name="tasks_manager_demo_status_not_downloaded">状态: 未下载</string>

</resources>
